# reqcheck

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/reqcheck/: __init__.py  __main__.py  cli.py  config.py  core.py  import_parser.py  models.py  reporter.py  requirements_parser.py  resolver.py  scanner.py  stdlib_filter.py
src/reqdiff/: __init__.py  __main__.py  cli.py  config.py  core.py  reporter.py  resolver.py  scanner.py
src/reqscan/: __init__.py  __main__.py  cli.py  config.py  core.py  reporter.py  resolver.py  scanner.py
tests/: test_import_parser.py  test_integration.py  test_requirements_parser.py  test_resolver.py  test_scanner.py  test_stdlib_filter.py
tests/fixtures/mismatch_names/: main.py
tests/fixtures/pyproject_project/: main.py  pyproject.toml
tests/fixtures/simple_project/: main.py
tests/fixtures/stdlib_not_flagged/: main.py
tests/fixtures/undeclared_import/: main.py
tests/fixtures/unused_dep/: main.py
