[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reqdiff"
version = "0.1.0"
description = "Detect unused and undeclared Python dependencies"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["dependencies", "requirements", "linting", "imports", "unused"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "rich>=13.0",
    "click>=8.0",
    "packaging>=23.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "mypy",
    "ruff",
]

[project.scripts]
reqdiff = "reqdiff.cli:main"

[project.urls]
Homepage = "https://github.com/blues1998/reqdiff"
Repository = "https://github.com/blues1998/reqdiff"
Issues = "https://github.com/blues1998/reqdiff/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/reqdiff"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
strict = true
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "tomli"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.reqdiff]
exclude_dirs = [".venv", "venv", ".git", "__pycache__", "dist", "build"]
